# auto-cleaning-solar-panel

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/Presentations/: README.md  apresentacao.tex  main.tex  makefile
firmware/dashboard/: Makefile  pyproject.toml
firmware/dashboard/backend/: hardware.py  main.py
firmware/dashboard/backend/services/: logger.py  weather.py
firmware/dashboard/frontend/: app.py
firmware/dashboard/tests/: test_backend.py
hardware/: .gitignore  Frame.ipt  Gear.ipt  Gear.stl  panel-suport.ipt  panel-suport.stl
hardware/CAD/: .gitignore
hardware/CAD/ipt/: .gitignore  panel-suport.ipt
hardware/CAD/stl/: Frame.stl  panel-suport.stl
hardware/Electronics/: Diagram.fz  electronics.md
hardware/OldVersions/: panel-suport.0004.ipt
hardware/panel-suport/AIP/FEA/: fe5siglj4.fins  fe5siglj4.fsat  fe5siglj4.ftes  fe5siglj4.fwiz  fe5siglk0.fmsh
