[project]
name = "ascm-dashboard"
version = "0.1.0"
description = "Dashboard para monitoramento e controle do sistema ASCM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit",
    "telemetrix",
    "pandas",
    "requests",
    "pydantic",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.408",
    "pytest",
    "ruff>=0.15.9",
]
